<resources>
    <string name="app_name">Billy</string>
    <string name="welcomeString">Wel♂cum♂</string>
    <string name="enter_name_entry">Введи имя</string>
    <string name="name_hint">Имя</string>
    <string name="start">Начать</string>
    <string name="app_main_name">Кто хочет стать ♂Billy♂онером</string>
    <string name="number_of_questions_hint">Количество вопросов</string>
</resources>