<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/billy_background"
    android:isScrollContainer="false" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/app_main_name"
        android:textColor="#F8EC7B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        android:elevation="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3EFD1"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcomeString"
                android:textColor="@color/primary_grey"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_name_entry"
                android:textColor="#757575"
                android:textSize="16sp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/main_activity_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E8D9A5"
                    android:hint="@string/name_hint"
                    android:textColor="@color/primary_grey"
                    android:textColorHint="@color/primary_light_grey">

                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/main_activity_number_of_questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFE8D9A5"
                    android:hint="@string/number_of_questions_hint"
                    android:textColor="@color/primary_grey"
                    android:textColorHint="@color/primary_light_grey">

                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/main_activity_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/yellow_button_option_border"
                android:text="@string/start"
                android:textColor="@color/primary_grey"
                android:textStyle="bold"
                app:backgroundTint="@null">

            </Button>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>